navbar fixed scrollbar

--- a/src/assets/stylesheets/homepage.css
+++ b/src/assets/stylesheets/homepage.css
@@ -59,7 +59,7 @@
     flex-direction: column;
     align-items: flex-start;
     position: fixed;
-    top: 0;
+    top: 100px;
     bottom: 0;
     background-color: var(--color-primary);
     height: 100%;
@@ -72,7 +72,6 @@
 
 .sideNav > * {
     width: 100%;
-    margin-top: 100px;
 }
 
 .sideNav a {
